--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
     </section>
     <!-- Home -->
 
+    <!-- Projects -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="projects">
+        <div class="container px-5">
+            <header>
+                <h2 id="projects-subtitle"><i class="bi bi-project-fill"></i>PROJECTS </h2>
+            </header>
+            <div class="main-body" id="projects-md"></div>
+
+        </div>
+    </section>
+    <!-- Projects -->
+
     <!-- Awards -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
