--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="projects">
         <div class="container px-5">
             <header>
-                <h2 id="projects-subtitle"><i class="bi bi-project-fill"></i>PROJECTS </h2>
+                <h2 id="projects-subtitle"><i class="bi bi-projects-fill"></i>PROJECTS </h2>
             </header>
             <div class="main-body" id="projects-md"></div>
 
